# munAI

./: CONTRIBUTING.md  LICENSE  MUNAI-INFRASTRUCTURE-UPDATE.md  README.md  pyproject.toml
docs/: architecture.md  configuration.md  creating-skills.md  getting-started.md  security.md
src/munai/: config.py  llm_client.py  main.py
src/munai/agent/: compaction.py  context.py  model_resolver.py  runtime.py  session.py
src/munai/audit/: logger.py  redactor.py  schemas.py
src/munai/channels/: base.py  pairing.py  telegram.py  webchat.py
src/munai/cli/: audit_cmd.py  daemon.py  doctor_cmd.py  gateway_cmd.py  models_cmd.py  onboard.py  sessions_cmd.py  skills_cmd.py  wizard_presets.py  wizard_state.py  wizard_steps.py  wizard_ui.py
src/munai/gateway/: approval.py  auth.py  lane_queue.py  protocol.py  server.py  session_router.py
tests/: conftest.py  test_config_models.py  test_daemon.py  test_gateway_cmd.py  test_llm_client.py  test_models_cmd.py  test_onboard.py  test_wizard_steps.py
tests/test_agent/: test_compaction.py  test_context.py  test_model_resolver.py  test_session.py
tests/test_audit/: test_cleanup.py
tests/test_channels/: test_pairing.py
tests/test_gateway/: test_protocol.py
tests/test_scheduler/: test_heartbeat.py
tests/test_skills/: test_loader.py
tests/test_tools/: test_file_tools.py  test_policy.py  test_sandbox.py  test_shell_exec.py
ui/: index.html
ui/css/: style.css
ui/js/: app.js  audit.js  channels.js  chat.js  config.js  cron.js  devices.js  doctor.js  health.js  sessions.js  skills.js  tools.js  usage.js  utils.js  ws.js
(+10 files in other folders)
