[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "munai"
version = "0.1.0"
description = "Self-hosted personal AI assistant platform"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9",
    "pydantic>=2.7",
    "openai>=1.35.0",
    "apscheduler>=3.10",
    "json5>=0.9",
    "questionary>=2.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "aioresponses>=0.7",
]
telegram = [
    "aiogram>=3.0",
]

[project.scripts]
munai = "munai.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/munai"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
